--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">BBS Student</p>
                 <nav>
-                    <a href="https://upareo.com/"><i class="fab fa-google"></i></a>
-		    <a href="https://upareo.com/"><i class="fab fa-youtube"></i></a>
-                    <a href="http://upareo.com/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100088208460991/"><i class="fab fa-facebook-f"></i></a>
                 </nav>
               
                
